# vetas

./: README.md  environment.yml  requirements.txt  setup.cfg
etas/: inversion.py  simulation.py
etas/commands/: inv.py  mc.py  run.py  run_ind.py  sim.py
etas/examples/: completeness_mag_estimate.py  invert_etas.py  invert_etas_mcvar.py  load_inversion_params.py
etas/examples/artifacts/: invert_etas_config.json  (+1 more)
examples/: ch_forecast.py  invert_etas.py  invert_etas_mcvar.py  load_inversion_params.py  simulate_catalog.py  simulate_catalog_continuation.py
examples/artifacts/: ch_forecast_config.json  invert_etas_config.json  simulate_catalog_continuation_config.json
examples/completeness_mag_estimate/: mag_estimate.py  run.sh
examples/invert_etas_params/: config_etas_inv.json  invert_etas.py  run.sh
examples/invert_etas_params_mc_var/: invert_etas_mc_var_config.json  invert_etas_mcvar.py
examples/load_inversion_params/: load_inversion_params.py
examples/simulate_catalog/: simulate_catalog.py  simulate_catalog_config.json
examples/simulation/: simulate_catalog.py  simulation_parameters.json
examples/simulation_continuation/: simulate_catalog_continuation.py
examples/simulation_time_invariant/: config_simulation.json  run.sh  simulate_catalog.py
examples/simulation_time_variant/: simulate_catalog_continuation.py
examples/switzerland_forecast/: ch_forecast.py  ch_forecast_config.json  run.sh
input/: args.json  args_ind.json  catalog.csv  nz_region.npy  read_region.py
runnable_code/: simulate_catalog_continuation.py
