[metadata]
name = etas
author = Leila Mizrahi, Nicolas Schmid
author_email = leila.mizrahi@sed.ethz.ch, nicolas.schmid@sed.ethz.ch
version = 3.0
description = Epidemic-Type Aftershock Sequence
long_description = file: README.md, LICENSE
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    pycsep
    attrs==21.4.0
    certifi==2022.6.15
    click==8.1.3
    click-plugins==1.1.1
    cligj==0.7.2
    Fiona==1.8.21
    geopandas==0.11.0
    munch==2.5.0
    numpy==1.23.1
    packaging==21.3
    pandas==1.4.3
    pynverse==0.1.4.4
    pyparsing==3.0.9
    pyproj==3.3.1
    python-dateutil==2.8.2
    pytz==2022.1
    scipy==1.8.1
    Shapely==1.8.2
    shutup==0.2.0
    six==1.16.0

[options.packages.find]
include = etas*

[options.entry_points]
console_scripts =
    etas-mc = etas.commands.mc:main
    etas-inv = etas.commands.inv:main
    etas-sim = etas.commands.sim:main
    etas-run = etas.commands.run:main
[flake8]
select = E,F,W
max_line_length = 79
ignore = E402, W503
exclude =
    .git,
    .tox,
    .eggs,
    .config,
    *.egg-info,
    __pycache__,
    .pytest_cache,
    env,
